--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="navbar-brand">
                     <span class="navbar-toggler-icon"></span>
                     <a class="ms-3" href="#">
-                        <img src="http://pngimagesfree.com/LOGO/M/Makemytrip/Make-My-Trip-Logo-Vector.png" alt="logo"
+                        <img src="https://seeklogo.com/images/M/makemytrip-logo-797F76C823-seeklogo.com.png" alt="logo"
                             width="70" height="23">
                     </a>
                 </div>
