--- a/index.html
+++ b/index.html
@@ -457,8 +457,8 @@
         </div>
 
 
-        <div class="div-temp bg-black">
-            <div class="d-flex img pt-5 justify-content-center">
+        <div class="row div-temp bg-black" >
+            <div class="d-flex pt-5 justify-content-center">
                 <a href="#">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#000000" viewBox="0 0 256 256">
                         <rect width="256" height="256" fill="none"></rect>
@@ -483,7 +483,7 @@
                 </a>
 
             </div>
-            <div class="d-flex img pt-5 justify-content-center">
+            <div class="d-flex pt-5 justify-content-center">
                 <div>
                 <img class="px-3"
                     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBdAbTXT0U_E_cy8wWrODzAmpZmQtdQkbp1w&usqp=CAU"
