--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             </div>
         </div>
         <div class="d-flex  justify-content-center">
-            <div class="type border rounded mt-2 w-75">
-                <div class="row p-3 d-flex shadow justify-content-around" style="box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;">
+            <div class="type border rounded mt-2 w-75" style="box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;" >
+                <div class="row p-3 d-flex" >
                     <div class="d-flex col col-sm-3 col-md-auto justify-content-center ">
                         <div class="d-block text-center pb-3">
                             <img src="https://cdn-icons-png.flaticon.com/128/2555/2555048.png" alt="car" height="40">
