--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
         <div class="d-flex  justify-content-center">
             <div class="type border rounded mt-2 w-75" style="box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;" >
-                <div class="row p-3 d-flex" >
+                <div class="row p-3 d-flex flex-wrap justify-content-between" >
                     <div class="d-flex col col-sm-3 col-md-auto justify-content-center ">
                         <div class="d-block text-center pb-3">
                             <img src="https://cdn-icons-png.flaticon.com/128/2555/2555048.png" alt="car" height="40">
@@ -86,14 +86,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="d-flex col col-sm-3 col-md-auto justify-content-center">
+                    <div class="d-block col col-sm-3 col-md-auto justify-content-center">
                         <div class="d-block text-center">
                             <img src="https://cdn-icons-png.flaticon.com/512/9676/9676834.png" alt="home" height="40">
                             <div class="d-flex justify-content-around" style="font-size: small; color:#000000">Homestays
                             </div>
                         </div>
                     </div>
-                    <div class="d-flex col col-sm-3 col-md-auto justify-content-center">
+                    <div class="d-block col col-sm-3 col-md-auto justify-content-center">
                         <div class="d-block text-center">
                             <img src="https://cdn-icons-png.flaticon.com/128/3709/3709044.png" alt="bus" height="40">
                             <div class="d-flex justify-content-around" style="font-size: small; color:#000000">
@@ -101,7 +101,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="d-flex col col-sm-3 col-md-auto justify-content-center">
+                    <div class="d-block col col-sm-3 col-md-auto justify-content-center">
                         <div class="d-block text-center">
                             <img src="https://cdn-icons-png.flaticon.com/128/2822/2822323.png" alt="hotel" height="40">
                             <div class="d-flex justify-content-around" style="font-size: small; color:#000000">
@@ -110,7 +110,7 @@
                         </div>
                     </div>
 
-                    <div class="d-flex col col-sm-3 col-md-auto justify-content-center">
+                    <div class="d-block col col-sm-3 col-md-auto justify-content-center">
                         <div class="d-block text-center">
                             <img src="https://cdn-icons-png.flaticon.com/128/2220/2220500.png" alt="gift card"
                                 height="40">
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="d-flex col col-sm-3 col-md-auto justify-content-center">
+                    <div class="d-block col col-sm-3 col-md-auto justify-content-center">
                         <div class="d-block text-center">
                             <img src="https://cdn-icons-png.flaticon.com/128/2696/2696176.png" alt="travel insurance"
                                 height="40">
@@ -128,7 +128,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="d-flex col col-sm-3 col-md-auto justify-content-center">
+                    <div class="d-block col col-sm-3 col-md-auto justify-content-center">
                         <div class="d-block text-center">
                             <img src="https://cdn-icons-png.flaticon.com/128/4891/4891668.png" alt="car" height="40">
                             <div class="d-flex justify-content-around" style="font-size: small; color:#000000">
@@ -136,7 +136,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="d-flex col col-sm-3 col-md-auto justify-content-center">
+                    <div class="d-block col col-sm-3 col-md-auto justify-content-center">
                         <div class="d-block text-center">
                             <img src="https://cdn-icons-png.flaticon.com/128/4919/4919639.png" alt="hotel" height="40">
                             <div class="d-flex justify-content-around" style="font-size: small; color:#000000">
